chore: fix precommit errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,15 @@ pytest = "^7.4.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+
+[tool.ruff]
+line-length = 100
+ignore = [
+    "E501",  # line too long
+]
