--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,7 @@ jobs:
       - name: Install vulturecov
         run: |
           python -m pip install --upgrade pip
-          pip install poetry
-          poetry install --with test
+          pip install ".[test]"
 
       - name: Unit tests
         run: pytest -ra -sv --color yes --code-highlight yes --durations=15 -vv --cov=src/vulturecov --cov-report=term-missing --cov-fail-under=100 tests
