--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ click = "^8.1.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
