--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^8.1.3"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
 
 [build-system]
 requires = ["poetry-core"]
