--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,3 +51,8 @@ repos:
     rev: 1.5.1
     hooks:
      - id: poetry-check
+
+  - repo: https://github.com/rhysd/actionlint/
+    rev: v1.6.25
+    hooks:
+      - id: actionlint
