--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,10 @@
 name = "vulturecov"
 version = "0.1.0"
 description = "Use your coverage report to remove Vulture false positives."
+license = "WTFPL"
 authors = ["Jonas Maison <Jonas1312@users.noreply.github.com>"]
 readme = "README.md"
+repository = "https://github.com/Jonas1312/vulturecov"
 packages = [
     { include = "vulturecov", from = "src" },
 ]
@@ -32,6 +34,3 @@ profile = "black"
 
 [tool.ruff]
 line-length = 100
-ignore = [
-    "E501",  # line too long
-]
