--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,10 +23,13 @@ jobs:
       - name: build
         run: poetry build
 
-      - name: Publish package distributions to PyPI
+      - name: Publish package distributions to test.pypi
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
 
       - name: check commit has tag
         run: git describe --exact-match --tags HEAD
+
+      - name: Publish package distributions to pypi
+        uses: pypa/gh-action-pypi-publish@release/v1
