--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Get tags
+        run: git fetch --tags origin
+
       - uses: actions/setup-python@v4
         with:
           python-version: 3.11
