--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,20 +18,20 @@ jobs:
           python-version: 3.11
           cache: "pip"
 
-      - name: pip and poetry
+      - name: Install pip and poetry
         run: |
           pip install --upgrade pip
           pip install poetry
 
-      - name: build
+      - name: Build package
         run: poetry build
 
-      #   - name: Publish package distributions to test.pypi
-      #     uses: pypa/gh-action-pypi-publish@release/v1
-      #     with:
-      #       repository-url: https://test.pypi.org/legacy/
+      - name: Publish package distributions to test.pypi
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
 
-      - name: check commit has tag
+      - name: Check commit has tag
         run: git describe --exact-match --tags HEAD
 
       - name: Publish package distributions to pypi
