--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,10 +43,10 @@ jobs:
       id-token: write
     steps:
       - uses: actions/download-artifact@v3
-        with:
-          path: dist
 
-      - run: ls -l dist
+      - run: |
+          ls -l artifacts
+          ls -l artifacts/dist
 
       - name: Check commit has tag
         run: git describe --exact-match --tags HEAD
