--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
+          name: dist
           path: ./dist
 
   publish:
@@ -43,6 +44,9 @@ jobs:
       id-token: write
     steps:
       - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: .
 
       - run: |
           ls -l artifacts
