--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,8 @@ jobs:
           path: .
 
       - run: |
-          ls -l dist
+          pwd
+          ls -la
 
       - name: Check commit has tag
         run: git describe --exact-match --tags HEAD
