--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,11 +46,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: dist
-          path: .
-
-      - run: |
-          pwd
-          ls -la
+          path: ./dist
 
       - name: Check commit has tag
         run: git describe --exact-match --tags HEAD
